.provarCaches/00D6C0000000xA6UAI/objects/sked__Tag__c.object
<CustomObject>
    <description>string metadata to be associated  with any other object</description>
    <fields>
        <fullName>sked__Classification__c</fullName>
        <description>Whether this tag is for human / asset or both type of resources.</description>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                    <default>true</default>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Human</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__UniqueKey__c</fullName>
        <description>System field to enforce that tag names are unique. Do not use for other purposes.</description>
        <inlineHelpText>System field to enforce that tag names are unique. Do not use for other purposes.</inlineHelpText>
        <label>UniqueKey</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tag</label>
    <listViews>
        <fullName>sked__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>sked__Type__c</columns>
        <columns>sked__Classification__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tag</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>